# DA-conference-reviewer-tool

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data-structures/: Graph.h
docs/html/: ConferenceManager_8cpp.html  ConferenceManager_8cpp__incl.map  ConferenceManager_8cpp__incl.md5  ConferenceManager_8h.html  ConferenceManager_8h.js  ConferenceManager_8h__dep__incl.map  ConferenceManager_8h__dep__incl.md5  ConferenceManager_8h__incl.map  ConferenceManager_8h__incl.md5  ConferenceManager_8h_source.html  Graph_8h.html  Graph_8h.js  Graph_8h__dep__incl.map  Graph_8h__dep__incl.md5  Graph_8h__incl.map  Graph_8h__incl.md5  Graph_8h_source.html  MutablePriorityQueue_8h.html  MutablePriorityQueue_8h__dep__incl.map  MutablePriorityQueue_8h__dep__incl.md5  MutablePriorityQueue_8h__incl.map  MutablePriorityQueue_8h__incl.md5  MutablePriorityQueue_8h_source.html  Parser_8h.html  Parser_8h.js  Parser_8h__dep__incl.map  Parser_8h__dep__incl.md5  Parser_8h__incl.map  Parser_8h__incl.md5  Parser_8h_source.html  Reviewer_8h.html  Reviewer_8h.js  Reviewer_8h__dep__incl.map  Reviewer_8h__dep__incl.md5  Reviewer_8h__incl.map  Reviewer_8h__incl.md5  Reviewer_8h_source.html  Submission_8h.html  Submission_8h.js  Submission_8h__dep__incl.map  (+57 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_6.js  enums_0.js  (+34 more)
src/: ConferenceManager.cpp  ConferenceManager.h  Parser.h  Reviewer.h  Submission.h  main.cpp
